<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.christenward.lifesimulator.MainActivity"
    android:background="#65657a">

    <ProgressBar
        style="@style/HealthBarStyle"
        android:layout_width="100dp"
        android:layout_height="15dp"
        android:id="@+id/health_bar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:progress="50"
        android:max="100"
        android:indeterminate="false"
        android:layout_marginTop="10dp" />

    <ProgressBar
        style="@style/EnergyBarStyle"
        android:layout_width="100dp"
        android:layout_height="15dp"
        android:id="@+id/energy_bar"
        android:progress="50"
        android:max="100"
        android:layout_below="@+id/health_bar"
        android:layout_alignStart="@+id/health_bar"
        android:layout_marginTop="10dp"
        android:indeterminate="false" />

    <ProgressBar
        style="@style/MoodBarStyle"
        android:layout_width="100dp"
        android:layout_height="15dp"
        android:id="@+id/mood_bar"
        android:progress="50"
        android:max="100"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:layout_below="@+id/energy_bar"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="@style/HungerBarStyle"
        android:layout_width="100dp"
        android:layout_height="15dp"
        android:id="@+id/hunger_bar"
        android:progress="50"
        android:max="100"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:layout_below="@+id/mood_bar"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/health_image"
        android:src="@drawable/health_icon"
        android:layout_above="@+id/energy_bar"
        android:layout_toStartOf="@+id/health_bar"
        android:layout_marginRight="5dp"
        android:tint="#640505"
        android:tintMode="multiply" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/energy_image"
        android:src="@drawable/energy_icon"
        android:layout_above="@+id/mood_bar"
        android:layout_toStartOf="@+id/energy_bar"
        android:layout_marginRight="5dp"
        android:tintMode="multiply"
        android:tint="#64dd17" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/mood_image"
        android:src="@drawable/mood_icon"
        android:layout_marginRight="5dp"
        android:tint="#FFD500F9"
        android:tintMode="multiply"
        android:layout_above="@+id/hunger_bar"
        android:layout_alignStart="@+id/energy_image" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/hunger_image"
        android:src="@drawable/hunger_icon"
        android:layout_marginRight="5dp"
        android:tintMode="multiply"
        android:tint="#ffa000"
        android:layout_alignTop="@+id/hunger_bar"
        android:layout_alignStart="@+id/mood_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/health_text"
        android:id="@+id/health_text"
        android:textSize="18dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:shadowColor="#ffffff"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"
        android:textAlignment="textStart"
        android:layout_alignTop="@+id/health_image"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/energy_text"
        android:id="@+id/textView"
        android:textSize="18dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:shadowColor="#ffffff"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"
        android:textAlignment="textStart"
        android:layout_alignTop="@+id/energy_image"
        android:layout_alignStart="@+id/health_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mood_text"
        android:id="@+id/textView2"
        android:textSize="18dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:shadowColor="#ffffff"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"
        android:textAlignment="textStart"
        android:layout_alignTop="@+id/mood_image"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hunger_text"
        android:id="@+id/textView3"
        android:textSize="18dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:shadowColor="#ffffff"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"
        android:textAlignment="textStart"
        android:layout_marginEnd="5dp"
        android:layout_alignTop="@+id/hunger_image"
        android:layout_toStartOf="@+id/hunger_image" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="135dp"
        android:id="@+id/imageView"
        android:src="@drawable/default_character"
        android:background="@drawable/portrait_outline"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout">
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:00"
        android:id="@+id/timeText"
        android:layout_above="@+id/frameLayout"
        android:layout_toStartOf="@+id/hunger_bar"
        android:layout_alignEnd="@+id/frameLayout"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day 0"
        android:id="@+id/dayText"
        android:layout_alignTop="@+id/timeText"
        android:layout_alignStart="@+id/hunger_bar"
        android:textStyle="bold" />

    <TextView
        android:text="Year 0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dayText"
        android:id="@+id/yearText"
        android:layout_alignStart="@+id/textView3"
        android:textStyle="normal|bold" />


</RelativeLayout>
